Fixed alignment of web-app link-buttons

--- a/style-sections.css
+++ b/style-sections.css
@@ -122,7 +122,7 @@
 	border-width: .25rem 0 .25rem 0;
 	color: white;
 	display: grid;
-	grid-row: 1fr;
+	grid-template-rows: 1fr;
 	margin-bottom: 5%;	
 }
 
@@ -161,12 +161,13 @@
 	border-width: 0.16rem;
 	color: white;
 	cursor: pointer;
+	flex-grow: 1;
 	font-family: var(--theme-font-family);
 	font-size: 1.1rem;
 	height: 2.5rem;
 	margin: .3rem 1rem;
-	max-width: 12rem;
-	min-width: 9rem; 
+	max-width: 15rem;
+	/* min-width: 9rem; */
 }
 
 .web-app__link-button:hover {
@@ -174,12 +175,10 @@
 }
 
 .web-app__link-buttons-container {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
+	display: flex;
+	flex-direction: row;
 	margin-bottom: 1%;
-	margin-left: 10rem;
-	margin-right: 10rem;
-	max-width: 30rem; 
+	justify-content: center;
 }
 
 .web-app__subtitle {
